# QuickChat

./: .gitignore  CMakeLists.txt  README.md  chatdbhandler.cpp  chatdbhandler.h  client.cpp  client.h  groupchatlistwidget.cpp  groupchatlistwidget.h  groupchatwidget.cpp  groupchatwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  menuwidget.cpp  menuwidget.h  privatechatwidget.cpp  privatechatwidget.h  server.cpp  server.h  setup_db.h
